@@ -16,8 +16,8 @@ def bids_getfile(bids_dir, data_type, subject_id, session_id=None, run_id=None):
     Example::
 
     >>> from mriqc.data import get_ds003_downsampled
-    >>> bids_getfile(get_ds003_downsampled(), 'anat', '05') #doctest: +ELLIPSIS
-    u'...ds003_downsampled/sub-05/anat/sub-05_T1w.nii.gz'
+    >>> bids_getfile(get_ds003_downsampled(), 'anat', '05') #doctest: +ELLIPSIS +IGNORE_UNICODE
+    '...ds003_downsampled/sub-05/anat/sub-05_T1w.nii.gz'
 
     """
     import os.path as op
