@@ -1,0 +1,2 @@
+-e git+https://github.com/oesteban/nipype.git@master#egg=nipype
+-e git+https://github.com/oesteban/rst2pdf.git@futurize/stage2#egg=rst2pdf
