@@ -1,6 +1,7 @@
 Release 0.8.6
 =============
 
+* [ENH] Started with python3 compatibility
 * [ENH] Added new M2WM measure #158
 * [FIX] QI2 is skipped if background intensity is not appropriate (#147)
 
